# why-plus

./: .gitignore  README.md  pyproject.toml
experiments/: README.md  bakeoff.py  ceiling_gbm.py  compare_players.py  face_validity.py  fg_stuff_2024.csv  fun_ablation.py  fun_aging.py  fun_aging_within.py  fun_ideal_pitch.py  fun_parallel_ablation.py  fun_pdp.py  fun_pitches_results.py  fun_roundrobin.py  save_xrv_model.py  showdown.py  sweep.py  vs_fangraphs.py  xrv.py
figures/: plot_axis_differential.py
whyplus/: __init__.py
whyplus/model/: __init__.py  data.py  features.py  net.py  train.py
