[project]
name = "whyplus"
version = "0.1.0"
description = "Why+ : a from-scratch Stuff+ whose penultimate representation is built to be explained."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7",
    "numpy>=1.26",
    "pandas>=2.0",
    "pyarrow>=15",
    "scikit-learn>=1.4",
    "pybaseball>=2.2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["whyplus"]

# --- torch CUDA pin -----------------------------------------------------------
# The box runs an NVIDIA 580 driver (CUDA 13.0 capable) on 3x RTX 3090 (Ampere,
# sm_86). Drivers are backward-compatible with older CUDA runtimes, so the cu128
# (CUDA 12.8) wheels load fine here. We pin the index *explicitly* so uv's
# resolver can never silently grab the CPU-only or a mismatched wheel from PyPI.
# This is correctness hygiene for *this* brief (the 80k-param net would train on
# CPU) and load-bearing for the explainer phase, which actually needs the GPU.
[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
